--- a/p/math/index.html
+++ b/p/math/index.html
@@ -539,13 +539,16 @@ $$<p>
 <p>#此篇以简单介绍为主，具体使用场景因题而异</p>
 </blockquote>
 <h2 id="扩展中国剩余定理">扩展中国剩余定理：
-</h2><p>对于方程组$   \begin{equation}\label{eq2}
-\left{
-\begin{array}\
-x \equiv a_1 \ (mod \ m_1)\
-x\equiv a_2 \ (mod \ m_2)
+</h2><p>对于方程组$$
+\begin{equation}\label{eq2}
+\left\{
+\begin{array}{l}
+x \equiv a_1 \ (\text{mod} \ m_1) \\
+x \equiv a_2 \ (\text{mod} \ m_2)
 \end{array}
 \right.
+\end{equation}
+$$
 \end{equation}  $,记特解为$ x_0 $，则有通解$ x=x_0-k*lcm(m_1,m_2) $,即这个方程组等价于$ x\equiv x_0\ (mod\ lcm(m_1,m_2)) $。</p>
 <p><strong>证明：</strong></p>
 <p>:::info
